--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div id="main-map"></div>
   <button type="button" name="button" id="button-bounce-markers">Bounce</button>
   <button type="button" name="button" id="locate">Take me to Chicago!</button>
+  <button type="button" name="button" id="checkLocation">Check Location</button>
 </body>
 
 </html>
